# transcribe-srt

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
src/transcribe_srt/: __init__.py
